// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Title Heading 1`] = `
.c0 {
  color: #132144;
  font-size: 28px;
  line-height: 38px;
}

<h1
  className="c0"
>
  Title
</h1>
`;

exports[`Storyshots Title Label 1`] = `
.c0 {
  color: #132144;
  font-size: 13px;
  line-height: 18px;
}

<h4
  className="c0"
>
  Title
</h4>
`;

exports[`Storyshots Title Subheading 1`] = `
.c0 {
  color: #132144;
  font-size: 18px;
  line-height: 24px;
}

<h2
  className="c0"
>
  Title
</h2>
`;

exports[`Storyshots Title Subtitle 1`] = `
.c0 {
  color: #132144;
  font-size: 15px;
  line-height: 20px;
}

<h3
  className="c0"
>
  Title
</h3>
`;
